# hugo-memex

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/superpowers/plans/: 2026-04-16-marginalia.md  2026-04-18-soft-delete.md
docs/superpowers/specs/: 2026-04-16-marginalia-design.md  2026-04-18-soft-delete-design.md
hugo_memex/: __init__.py  __main__.py  cli.py  config.py  db.py  indexer.py  mcp.py  parser.py  writer.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_indexer.py  test_integration.py  test_mcp.py  test_parser.py  test_writer.py
tests/fixtures/: hugo.toml
tests/fixtures/content/: _index.md
tests/fixtures/content/media/: test-book.md
tests/fixtures/content/post/test-post/: index.md
tests/fixtures/content/projects/test-project/: index.md
tests/fixtures/data/marginalia/post/: test-post.yaml
